// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="overview-quality-gate-conditions"
>
  <div
    className="display-flex-center overview-quality-gate-conditions-section-title"
  >
    <h4
      className="padded"
    >
      quality_gates.conditions.cayc
    </h4>
  </div>
  <div
    className="big-padded bordered-bottom overview-quality-gate-conditions-list"
  >
    <Alert
      className="no-margin-bottom"
      variant="success"
    >
      overview.quality_gate.conditions.cayc.passed
    </Alert>
  </div>
  <div
    className="display-flex-center overview-quality-gate-conditions-section-title"
  >
    <h4
      className="padded"
    >
      quality_gates.conditions.other_conditions
    </h4>
    <span
      className="text-muted big-spacer-left"
    >
      overview.X_conditions_failed.2
    </span>
  </div>
  <h5
    className="big-padded overview-quality-gate-conditions-subsection-title"
  >
    quality_gates.conditions.new_code
  </h5>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "isCaycCompliant": true,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "new_bugs",
          "op": "GT",
        },
      ]
    }
  />
  <h5
    className="big-padded overview-quality-gate-conditions-subsection-title"
  >
    quality_gates.conditions.overall_code
  </h5>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "isCaycCompliant": true,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "bugs",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="overview-quality-gate-conditions"
>
  <ButtonPlain
    aria-expanded={true}
    aria-label="overview.quality_gate.hide_project_conditions_x.Foo"
    className="width-100 text-left"
    onClick={[Function]}
  >
    <div
      className="display-flex-center"
    >
      <h3
        className="overview-quality-gate-conditions-project-name text-ellipsis"
        title="Foo"
      >
        <ChevronDownIcon />
        <span
          className="spacer-left"
        >
          Foo
        </span>
      </h3>
    </div>
  </ButtonPlain>
  <div
    className="display-flex-center overview-quality-gate-conditions-section-title"
  >
    <h4
      className="padded"
    >
      quality_gates.conditions.cayc
    </h4>
  </div>
  <div
    className="big-padded bordered-bottom overview-quality-gate-conditions-list"
  >
    <Alert
      className="no-margin-bottom"
      variant="success"
    >
      overview.quality_gate.conditions.cayc.passed
    </Alert>
  </div>
  <div
    className="display-flex-center overview-quality-gate-conditions-section-title"
  >
    <h4
      className="padded"
    >
      quality_gates.conditions.other_conditions
    </h4>
    <span
      className="text-muted big-spacer-left"
    >
      overview.X_conditions_failed.2
    </span>
  </div>
  <h5
    className="big-padded overview-quality-gate-conditions-subsection-title"
  >
    quality_gates.conditions.new_code
  </h5>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "isCaycCompliant": true,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "new_bugs",
          "op": "GT",
        },
      ]
    }
  />
  <h5
    className="big-padded overview-quality-gate-conditions-subsection-title"
  >
    quality_gates.conditions.overall_code
  </h5>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "isCaycCompliant": true,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "bugs",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;
